--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         .header {
             background: linear-gradient(135deg, #ec4899 0%, #33adea  100%);
             color: white;
-            padding: 3rem 2rem;
+            padding: 4rem 2rem;
             text-align: center;
         }
 
@@ -290,9 +290,9 @@
     <div class="container">
         <!-- Cabeçalho -->
         <div class="header">
-            <div class="badge">PROJETO CONFIDENCIAL</div>
+            <!-- <div class="badge">PROJETO CONFIDENCIAL</div> -->
             <h1>PROJETO NOVO MEMBRO</h1>
-            <p>Iniciativa Familiar de Alto Impacto</p>
+            <p>Iniciativa Familiar</p>
         </div>
 
         <!-- Conteúdo -->
@@ -429,14 +429,17 @@
 
             <!-- Anúncio Principal -->
             <div class="announcement">
-                <h3>🎉 BEBÉ A CAMINHO! 🎉</h3>
+                <h3> O nosso bebé está a caminho! 🤰🏻</h3>
                 <p>
-                    Esta é a nossa forma especial de partilhar a notícia mais incrível das nossas vidas!
+                    Esta é a nossa forma de partilhar o momento mais especial da nossa vida! ❤️
                 </p>
                 <div class="love-message">
-                    <span>❤️</span>
+                    <!-- <span>🩷</span> -->
+                    <!-- <span>🍼</span> -->
+                    <!-- <span>🩵</span> -->
+                    <!-- <span>❤️</span>
                     <span>Com todo o nosso amor</span>
-                    <span>❤️</span>
+                    <span>❤️</span> -->
                 </div>
             </div>
         </div>
