--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
                 <div class="card-header">
                     <div class="card-title">
                         <span class="icon icon-star">⭐</span>
-                        Resumo Executivo
+                        Resumo do Projeto
                     </div>
                 </div>
                 <div class="card-content">
                     <p class="text-lg">
-                        Temos o prazer de anunciar o lançamento do nosso projeto mais ambicioso e emocionante até hoje. Será uma iniciativa que
+                        Queremos anunciar o lançamento do nosso projeto mais ambicioso e emocionante até hoje. Será uma iniciativa que
                         transformará completamente a nossa vida.
                     </p>
                 </div>
